[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bus"
version = "0.1.0"
description = "Tiny HTTP message bus + clients for coordinating multiple LLM-driven (or other) agents across machines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RapidMark" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
]

# Pure stdlib — no runtime dependencies.

[project.scripts]
agent-bus-server = "bus_server:main"

[project.urls]
Source = "https://github.com/RapidMark/ecdsa-census-2026"

[tool.setuptools]
py-modules = ["bus_server"]
